# context-aware-test-policy

./: Cargo.toml  Makefile  README.md  metadata.yml
.github/workflows/: release.yml  test.yml
src/: lib.rs
test_data/: app_deployment.json  example-stack.yml  session.yml
