[package]
authors = ["Fabrizio Sestito <fabrizio.sestito@suse.com>"]
edition = "2021"
name = "context-aware-test-policy"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.25.0", default_features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = { git = "https://github.com/jvanz/policy-sdk-rust", branch = "can-i-remove-k8s-wrapper" }
# kubewarden-policy-sdk = "0.13.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
